@@ -30,7 +30,7 @@ class DulwichDistribution(Distribution):
         return not self.pure
 
     global_options = Distribution.global_options + [
-        ('pure', None, 
+        ('pure', None,
             "use pure (slower) Python code instead of C extensions")]
 
     pure = False
@@ -90,5 +90,8 @@ setup(name='dulwich',
               include_dirs=include_dirs),
           ],
       distclass=DulwichDistribution,
+      entry_points={
+          'paste.app_factory': 'main=dulwich.web:make_paster_app'
+          },
       **setup_kwargs
       )
